# PDFDeck

./: .gitignore  LICENSE  claude.md  extracted_strings.json  file_version_info.txt  pdfdeck.spec  pyproject.toml  run_pdfdeck.pyw
.claude/: .gitignore  ARCHITECTURE.md  CLAUDE-TEMPLATE.md  CLAUDE.md  README.md  plan.md  settings.local.json
.claude/agents/: backend-specialist.md  explorer-agent.md  frontend-specialist.md  orchestrator.md  project-planner.md
.claude/core/: memory_manager.py
.claude/logs/: .gitkeep
.claude/memory/: README.md
.claude/memory/session-summaries/: .gitkeep
.claude/scripts/: setup_environment.py
.claude/skills/: doc.md
.claude/skills/api-patterns/: SKILL.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/clean-code/: SKILL.md
.claude/skills/database-design/: SKILL.md
.claude/skills/nextjs-best-practices/: SKILL.md
.claude/skills/nodejs-best-practices/: SKILL.md
.claude/skills/plan-writing/: SKILL.md
.claude/skills/python-patterns/: SKILL.md
.claude/skills/react-patterns/: SKILL.md
.claude/skills/systematic-debugging/: SKILL.md
.claude/skills/tailwind-patterns/: SKILL.md
.claude/skills/vulnerability-scanner/: SKILL.md
.claude/workflows/: create.md  plan.md
installer/: pdfdeck_installer.iss
resources/styles/: dark_theme.qss
resources/translations/: de.json  en.json  fr.json  pl.json
scripts/: README.md  build.py  preflight.py  release.py  setup_i18n.py  setup_installer.py  setup_updater.py
scripts/templates/electron/: README.md  updater.config.ts  updater.ts
scripts/templates/innosetup/: README.md  template.iss
src/pdfdeck/: __init__.py  __main__.py  app.py  cli.py
src/pdfdeck/core/: __init__.py  bates_numberer.py  diff_engine.py  document_classifier.py  header_footer.py  invoice_parser.py  models.py  ocr_engine.py  pdf_manager.py  pdfa_converter.py  processing_profile.py  profile_manager.py  signature_engine.py  stamp_renderer.py  thumbnail_worker.py  watch_folder.py
src/pdfdeck/core/updater/: __init__.py  update_checker.py  update_downloader.py  update_manager.py
src/pdfdeck/ui/: __init__.py  main_window.py  sidebar.py
src/pdfdeck/ui/dialogs/: __init__.py  bates_dialog.py  header_footer_dialog.py  link_dialog.py  link_manager_dialog.py  nup_dialog.py  select_area_link_dialog.py  signature_dialog.py  split_dialog.py  text_search_link_dialog.py  update_dialog.py  whiteout_dialog.py
src/pdfdeck/ui/pages/: __init__.py  analysis_page.py  automation_page.py  base_page.py  ocr_page.py  pages_view.py  redaction_page.py  security_page.py  settings_page.py  tools_page.py  watch_folder_page.py  watermark_page.py
src/pdfdeck/ui/widgets/: __init__.py  diff_viewer.py  interactive_page_preview.py  profile_combo.py  stamp_picker.py  (+4 more)
src/pdfdeck/utils/: __init__.py  i18n.py  regex_patterns.py
